--- a/2_WarmingUp/0.1.warming_up_yelp_review.ipynb
+++ b/2_WarmingUp/0.1.warming_up_yelp_review.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 영문 스크래치\n",
+    "# [모듈 0.1] 영문 스크래치\n",
+    "\n",
+    "아래 HuggingF Face - Getting Started 링크에 대해서 실습을 통하여 핸즈온을 해봅니다.\n",
+    "\n",
+    "주요 단계는 아래와 같습니다.\n",
+    "- 1. 워밍업\n",
+    "- 2. Yelp 데이타 셋으로 훈련 및 추론\n",
+    "\n",
+    "---\n",
+    "### 참고 자료\n",
     "\n",
     "[HuggingF Face - Getting Started](https://huggingface.co/docs/transformers/tasks/sequence_classification)"
    ]
