--- a/2_WarmingUp/0.2.warming_up_imdb_custom_dataset.ipynb
+++ b/2_WarmingUp/0.2.warming_up_imdb_custom_dataset.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35195404",
+   "id": "a6c4c5db",
    "metadata": {},
    "source": [
-    "# IMDB 리뷰 스크래치 (영문)\n",
+    "# [모듈 0.2] IMDB 리뷰 스크래치 (영문)\n",
     "\n",
-    "[HuggingF Face - Getting Started](https://huggingface.co/docs/transformers/tasks/sequence_classification)"
+    "아래는 IMDB 데이터 셋(영문) 을 통하여 사용자 정의 데이터 셋을 생성하여, Pytorch 및 HF Trainer 를 통하여 훈련하는 것을 배웁니다.\n",
+    "\n",
+    "주요 단계는 아래와 같습니다.\n",
+    "- 1. 데이터 IMDB 다운로드\n",
+    "- 2. 데이터 셋 준비\n",
+    "- 3. torch custome Dataset 생성\n",
+    "- 4. Fine-tuning with Trainer\n",
+    "- 5. Fine-tuning with native PyTorch\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fedfe317",
+   "id": "e87d9509",
    "metadata": {},
    "source": [
     "\n",
@@ -22,9 +29,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c9dc6eb",
+   "metadata": {},
+   "source": [
+    "# 1. 데이터 IMDB 다운로드"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fbf2e2a9",
+   "id": "8ab7e785",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "13bff8b2",
+   "id": "2f69540f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f290af92",
+   "id": "7ad500e7",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "99644ecc",
+   "id": "d4bde5d6",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +131,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80bd3677",
+   "id": "e791eac5",
+   "metadata": {},
+   "source": [
+    "# 2. 데이터 셋 준비"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8643084",
    "metadata": {},
    "source": [
     "## 검증 데이터 셋 생성"
@@ -125,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b368f20f",
+   "id": "28ef9ef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93e4f2d",
+   "id": "49af3b0b",
    "metadata": {},
    "source": [
     "## distilbert-base-uncased 모델에 대한 tokenizer 생성"
@@ -144,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b8ff050e",
+   "id": "3ed4b551",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525ef77e",
+   "id": "752d90c7",
    "metadata": {},
    "source": [
     "## distilbert-base-uncased 모델에 대한 입력 인코딩 생성"
@@ -163,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "916e3e27",
+   "id": "7be869ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3e1b383c",
+   "id": "623293ee",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5488e537",
+   "id": "060c3c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +229,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a636aeb4",
+   "id": "eeadcc2d",
    "metadata": {},
    "source": [
-    "## torch custome Dataset 생성"
+    "# 3. torch custome Dataset 생성"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2a1cb9a",
+   "id": "622c6470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +264,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9088c15",
+   "id": "ea5bc707",
    "metadata": {},
    "source": [
-    "## Fine-tuning with Trainer"
+    "# 4. Fine-tuning with Trainer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "606d0186",
+   "id": "a4b69b3a",
    "metadata": {},
    "outputs": [
     {
@@ -729,16 +752,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c996859",
+   "id": "daf1e10b",
    "metadata": {},
    "source": [
-    "## Fine-tuning with native PyTorch"
+    "# 5. Fine-tuning with native PyTorch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1134dbfb",
+   "id": "59490348",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0688aeb",
+   "id": "873c347c",
    "metadata": {},
    "outputs": [],
    "source": []
