--- a/2_WarmingUp/0.3.warming_up_naver_review.ipynb
+++ b/2_WarmingUp/0.3.warming_up_naver_review.ipynb
@@ -4,16 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 네이버 영화 리뷰 스크래치\n",
+    "# [모듈 0.3]  네이버 영화 리뷰 스크래치\n",
     "\n",
-    "[HuggingF Face - Getting Started](https://huggingface.co/docs/transformers/tasks/sequence_classification)"
+    "- 김대근님의 [Lab 1-1: Train Hugging Face Transformers on Local Environment](https://github.com/daekeun-ml/sm-huggingface-kornlp/blob/main/lab_1_training/1_local_training.ipynb) 노트북의 대부분 내용을 실행한 내용 입니다.\n",
+    "---\n",
+    "\n",
+    "아래 노트북은 다음과 같은 작업을 합니다.\n",
+    "- 1. 환경 설정\n",
+    "- 2. 데이터 셋트 로딩\n",
+    "- 3. Pretrained Model 및 토큰 나이저 로딩\n",
+    "- 4. 훈련 준비\n",
+    "- 5. 훈련 실행\n",
+    "- 6. 추론 및 평가"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. 워밍업"
+    "# 1. 환경 설정"
    ]
   },
   {
@@ -38,6 +47,13 @@
     ")\n",
     "logger = logging.getLogger(__name__)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 데이터 셋트 로딩"
    ]
   },
   {
@@ -155,6 +171,13 @@
     "if not os.listdir(test_dir):\n",
     "    test_dataset.save_to_disk(test_dir)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Pretrained Model 및 토큰 나이저 로딩"
    ]
   },
   {
@@ -367,6 +390,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 훈련 준비"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -432,6 +462,13 @@
     "    tokenizer=tokenizer,\n",
     "    compute_metrics=compute_metrics    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 훈련 실행"
    ]
   },
   {
@@ -623,6 +660,13 @@
     "    trainer.train(resume_from_checkpoint=last_checkpoint)\n",
     "else:\n",
     "    trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. 추론 및 평가"
    ]
   },
   {
