--- a/3_Training/1.1.Prepare_Data_Naver_Review.ipynb
+++ b/3_Training/1.1.Prepare_Data_Naver_Review.ipynb
@@ -7,8 +7,15 @@
     "# [모듈 1.1] 네이버 영화 리뷰 감성 데이타 준비\n",
     "\n",
     "\n",
-    "이 데이터는 총 20만개 리뷰로 구성된 데이터로 영화 리뷰에 대한 텍스트와 레이블(0: 부정, 1: 긍정)으로 구성되어 있습니다.\n",
-    "\n"
+    "이 데이터는 총 20만개 리뷰로 구성된 데이터로 영화 리뷰에 대한 텍스트와 레이블(0: 부정, 1: 긍정)으로 구성되어 있습니다. 여기서는 이 데이타를 준비하는 과정을 다룹니다.\n",
+    "\n",
+    "다음과 같은 작업을 주로 합니다.\n",
+    "- 1. 환경 설정\n",
+    "- 2. 데이터 다운로드\n",
+    "- 3. EDA (탐색적 데이터 분석; Exploratory Data Analysis)\n",
+    "- 4. 데이터 저장\n",
+    "- 5. S3 데이터 업로딩\n",
+    "- 6. 변수 저장\n"
    ]
   },
   {
@@ -50,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. 데이터 준비\n",
+    "# 2. 데이터 다운로드\n",
     "\n",
     "https://github.com/e9t/nsmc/ 에 공개된 네이버 영화 리뷰 학습/검증 데이터를 다운로드합니다.<br>\n",
     "학습 데이터는 총 15만건이며, 검증 데이터는 총 5만건입니다."
