--- a/3_Training/2.1.Train_Scratch.ipynb
+++ b/3_Training/2.1.Train_Scratch.ipynb
@@ -13,10 +13,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "이 노트북은 아래와 같은 주요 작업을 합니다.\n",
+    "- 1. 환경 설정\n",
+    "- 2. 데이터 로딩\n",
+    "- 3. Hugging Face Electra tokenizer 및 pre-trained model 사용\n",
+    "- 4. torch custome Dataset 생성 및 훈련 준비\n",
+    "- 5. 모델 Fine-Tuning\n",
+    "    - 5.1. Fine-tuning with native PyTorch\n",
+    "    - 5.2. 파이썬 스크립트로 훈련    \n",
+    "    - 5.3. Fine-tuning with Trainer\n",
+    "    \n",
     "---\n",
     "### 참고:\n",
-    "[Fine-tuning with custom datasets](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)"
+    "- 커스텀 데이터 셋으로 파인 튜닝을 위한 참조 자료\n",
+    "    - [Fine-tuning with custom datasets](https://huggingface.co/transformers/v3.2.0/custom_datasets.html)"
    ]
   },
   {
@@ -586,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2. 스크립트로 훈련"
+    "## 5.2. 파이썬 스크립트로 훈련"
    ]
   },
   {
