--- a/4_Serving/1.1.Rreal_time_endpoint.ipynb
+++ b/4_Serving/1.1.Rreal_time_endpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ddbff61f",
+   "id": "9ad344b5",
    "metadata": {},
    "source": [
     "# [모듈 1.1] Real-Time Endpoint 배포 및 추론\n",
@@ -13,16 +13,17 @@
     "이 노트북은 아래와 같은 작업을 합니다.\n",
     "\n",
     "- 1. 환경 셋업\n",
-    "- 2. 배포 준비\n",
-    "- 3. 엔드포인트 생성\n",
-    "- 4. 엔드 포인트 추론\n",
-    "- 5. 로컬 엔드 포인트 삭제\n",
+    "- 2. 모델 패키징\n",
+    "- 3. SageMaker Endpoint Deployment\n",
+    "- 4. Inference\n",
+    "- 5. 테스트 데이터 추론 및 성능 평가\n",
+    "- 6. 엔드 포인트 삭제\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db684a6a",
+   "id": "f79d400c",
    "metadata": {},
    "source": [
     "---\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8057b96",
+   "id": "4efce8dd",
    "metadata": {},
    "source": [
     "# 1. 환경 셋업"
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e86215",
+   "id": "e21410de",
    "metadata": {},
    "source": [
     "## 기본 세팅\n",
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c9671117",
+   "id": "60342f77",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9779c838",
+   "id": "d3d1d96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b243d0f9",
+   "id": "db0436c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9ae4e94c",
+   "id": "032fc784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d2db449",
+   "id": "561adc15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c55d85",
+   "id": "254563a8",
    "metadata": {},
    "source": [
     "# 2. 모델 패키징\n",
@@ -168,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c0534971",
+   "id": "c75675e5",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "591ef019",
+   "id": "1eddd32a",
    "metadata": {},
    "source": [
     "### 모델 패키징 폴더 정리"
@@ -199,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "424268de",
+   "id": "bc316198",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6fdf527",
+   "id": "12e156cc",
    "metadata": {},
    "source": [
     "### 모델 및 토큰나이저 아티펙트 다운로드"
@@ -232,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6dffab30",
+   "id": "5b0565a1",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b4e122",
+   "id": "5a5ae46e",
    "metadata": {},
    "source": [
     "### pre-trained 모델 가중치 삭제"
@@ -295,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7f787425",
+   "id": "2f1ada9c",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50abcf3",
+   "id": "1c858038",
    "metadata": {},
    "source": [
     "### fine-tunnig 된 모델 가중치 다운로드 및 이름 변경"
@@ -328,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fb490022",
+   "id": "e03ffdb1",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8d83c2",
+   "id": "3eef0038",
    "metadata": {},
    "source": [
     "### 모델 아테펙트를 model.tar.gz 로 압축"
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0445d7",
+   "id": "f00a357d",
    "metadata": {},
    "source": [
     "모델 파라메터 및 토크나이저를 `model.tar.gz`으로 압축합니다. 압축 파일명은 자유롭게 지정할 수 있으나, 반드시 `tar.gz`로 압축해야 합니다."
@@ -386,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0086f4fc",
+   "id": "19a8396a",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9093da36",
+   "id": "0227a072",
    "metadata": {},
    "source": [
     "### model.tar.gz 를 S3 에 업로드ㅡ"
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ef18f92",
+   "id": "18ec237a",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403cad3f",
+   "id": "e9705e40",
    "metadata": {},
    "source": [
     "모델 파라메터 및 토크나이저를 `model.tar.gz`으로 압축합니다. 압축 파일명은 자유롭게 지정할 수 있으나, 반드시 `tar.gz`로 압축해야 합니다."
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f22f4b5",
+   "id": "86f2abf1",
    "metadata": {},
    "source": [
     "# 3. SageMaker Endpoint Deployment"
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985b2862",
+   "id": "2afbc5b1",
    "metadata": {},
    "source": [
     "## 3.1. 앤드포인트 배포\n",
@@ -469,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a4921aa2",
+   "id": "890577f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "353cfaf8",
+   "id": "317305c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6fea6580",
+   "id": "5c7983e3",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fdab1b62",
+   "id": "457e0b2c",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1dcfb5",
+   "id": "6bedc9a3",
    "metadata": {},
    "source": [
     "## 3.2. Wait for the endpoint jobs to complete\n",
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5c25d1ad",
+   "id": "681cffa2",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94b5d0f",
+   "id": "8b8c11fe",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0adca80",
+   "id": "42363749",
    "metadata": {},
    "source": [
     "## 4.1. SageMaker Python SDK 추론"
@@ -644,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "97669fe8",
+   "id": "e44a7089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "180c79a6",
+   "id": "4565fc3b",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ded13b",
+   "id": "8a4555a8",
    "metadata": {},
    "source": [
     "## 4.2. Botoe3 추론"
@@ -690,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d9465ea5",
+   "id": "5935c9b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d5e6dc3a",
+   "id": "406868eb",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d09aea",
+   "id": "f0ae286a",
    "metadata": {},
    "source": [
     "# 5. 테스트 데이터 추론 및 성능 평가"
@@ -740,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83d28b0e",
+   "id": "fc8995ed",
    "metadata": {},
    "source": [
     "## 5.1. 테스트 데이터 로딩"
@@ -749,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cc827d6f",
+   "id": "281e98d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "de11cbf4",
+   "id": "dbf84f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "247dbbda",
+   "id": "04514164",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78bf1b29",
+   "id": "206d6405",
    "metadata": {},
    "source": [
     "## 5.2. 배치 단위로 추론"
@@ -816,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f75a1b64",
+   "id": "611620ac",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364898c8",
+   "id": "344a3300",
    "metadata": {},
    "source": [
     "## 5.3. 기존 테스트 데이터에 실험 데이터 추가"
@@ -850,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "890286b8",
+   "id": "6328e761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3d7c31ba",
+   "id": "ff54aa1e",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0efc46d0",
+   "id": "2ecb0f3c",
    "metadata": {},
    "source": [
     "## 5.4. 정확도 및 혼돈 행렬 확인"
@@ -1011,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "306f0a16",
+   "id": "61bab308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "33243358",
+   "id": "199cb253",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f039c7c",
+   "id": "44448587",
    "metadata": {},
    "source": [
     "# 6. 엔드 포인트 삭제\n",
@@ -1057,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "018a00ee",
+   "id": "7e8469a1",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b89e86",
+   "id": "94dfb9e8",
    "metadata": {},
    "outputs": [],
    "source": []
