--- a/1_NSMC-Classification/3_Training/2.3.Train_Local_Script_Mode.ipynb
+++ b/1_NSMC-Classification/3_Training/2.3.Train_Local_Script_Mode.ipynb
@@ -300,7 +300,12 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
