add basic description

--- a/1_NSMC-Classification/2_WarmingUp/0.1.warming_up_yelp_review.ipynb
+++ b/1_NSMC-Classification/2_WarmingUp/0.1.warming_up_yelp_review.ipynb
@@ -56,7 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tokenizer 예시"
+    "### tokenizer 예시\n",
+    "아래 결과 설명\n",
+    "- input_ids: 주어진 문장에서 Token 을 만들고 이에 상응하는 숫자로 표시 함.\n",
+    "- token_type_ids: BERT 모델은 문제의 유형에 따라 한개의 문장, 두개의 문장을 넣을 수 있음. 주어진 문장을 구분 짓기 위함. 하나의 문장이 들어가면 모두 0 임. 두번째 문장이 들어가면 모두 1임\n",
+    "- attention mask: 주어진 문장의 지정된 길이가 있음. 만약에 지정된 길이 만큼 모두 사용하면 모두 1이 되고, 지정된 길이 만큼 사용하지 않으면 Padding  을 넣음. 이를 0 으로 표시 함.\n",
+    "\n",
+    "#### 참고\n",
+    "- [한글 허깅페이스 기본 시작](https://www.ohsuz.dev/22f4e8e7-64a3-4789-9dd2-171913883733)"
    ]
   },
   {
@@ -82,7 +89,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tokenizer 디코딩"
+    "### tokenizer 디코딩\n",
+    "- 위의 'input_ids': [101, 1130, 170, 4569, 1107, 1103, 1747, 1175, 2077, 170, 16358, 13834, 2875, 119, 102] 가 아래 처럼 다시 원문으로 디코딩이 되는 예시"
    ]
   },
   {
@@ -109,7 +117,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tokenizer 인코딩 예시"
+    "### tokenizer 인코딩 예시\n",
+    "- 3개의 문장에 대한 인코딩 예시"
    ]
   },
   {
@@ -146,20 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f0d06fee6a4d6fa1f678066fed55bf",
+       "model_id": "73fa399110ce44229281e35199c6b6b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tokenizer 함수 정의"
+    "### tokenizer 함수 정의 및 데이터 세트를 인코딩 하기"
    ]
   },
   {
@@ -251,9 +246,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-abceb9d59c7d7796.arrow\n",
-      "Loading cached processed dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-0962c908b8da0a49.arrow\n"
+      "Loading cached processed dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-abceb9d59c7d7796.arrow\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b270903f45c34a2896ca9dd017930909",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -301,6 +309,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이미 BERT 입력에 필요한 'input_ids', 'token_type_ids', 'attention_mask' 를 생성하였으므로, 원문의 text 삭제 및 label --> labels 로 이름 변경"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -312,6 +327,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "훈련 및 검증의 일부 데이터 (1000 개) 로 데이터 세트 생성"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -320,14 +342,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached shuffled indices for dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-f62f2ff8b5f7db66.arrow\n",
-      "Loading cached shuffled indices for dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-f8cad94b1caf1000.arrow\n"
+      "Loading cached shuffled indices for dataset at /home/ec2-user/.cache/huggingface/datasets/yelp_review_full/yelp_review_full/1.0.0/e8e18e19d7be9e75642fc66b198abadb116f73599ec89a69ba5dd8d1e57ba0bf/cache-f62f2ff8b5f7db66.arrow\n"
      ]
     }
    ],
    "source": [
     "small_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42).select(range(1000))\n",
     "small_eval_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "토치의 \"데이터 로더\" 를 batch_size=8 로 생성"
    ]
   },
   {
@@ -343,6 +371,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 batch (8개의 레코드) 의 값을 확인"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -351,15 +386,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "labels: ]n tensor([0, 1, 1, 4, 0, 1, 3, 1])\n",
+      "labels: ]n tensor([0, 2, 3, 0, 3, 3, 0, 1])\n",
       "input_ids: \n",
-      " tensor([[  101,   141,  2346,  ...,     0,     0,     0],\n",
-      "        [  101,  1799,  1103,  ...,     0,     0,     0],\n",
-      "        [  101,  9684,   119,  ...,     0,     0,     0],\n",
+      " tensor([[  101,  1188,  1282,  ...,     0,     0,     0],\n",
+      "        [  101,  1422,  3143,  ...,     0,     0,     0],\n",
+      "        [  101, 23158,  1204,  ...,     0,     0,     0],\n",
       "        ...,\n",
-      "        [  101,  1130,  1103,  ...,     0,     0,     0],\n",
-      "        [  101,  1327,   170,  ...,     0,     0,     0],\n",
-      "        [  101, 23878,  1118,  ...,     0,     0,     0]])\n",
+      "        [  101,   146,   112,  ...,     0,     0,     0],\n",
+      "        [  101,  1573,  1292,  ...,     0,     0,     0],\n",
+      "        [  101,   146,  1932,  ...,     0,     0,     0]])\n",
       "token_type_ids: \n",
       " tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
@@ -393,7 +428,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre-trained model 로딩"
+    "### Pre-trained model 로딩\n",
+    "- HuggingFace Hub 에서 \"bert-base-cased\" Pre-Trained 모델 다운로드"
    ]
   },
   {
@@ -407,10 +443,10 @@
      "text": [
       "/home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages/transformers/configuration_utils.py:336: UserWarning: Passing `gradient_checkpointing` to a config initialization is deprecated and will be removed in v5 Transformers. Using `model.gradient_checkpointing_enable()` instead, or if you are using the `Trainer` API, pass `gradient_checkpointing=True` in your `TrainingArguments`.\n",
       "  warnings.warn(\n",
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -458,7 +494,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre-trained 모델 로딩"
+    "### Pre-trained 모델을 디바이스에 로딩\n",
+    "- device 가 GPU 이면 GPU 에 \"Pre-trained 모델\" 로딩\n",
+    "- device 가 CPU 이면 CPU 에 \"Pre-trained 모델\" 로딩"
    ]
   },
   {
@@ -784,7 +822,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 모델 훈련 루프"
+    "### 모델 훈련 루프\n",
+    "- 모델의 훈련 루프를 실행 함.\n",
+    "    - 아래의 num_epochs 만큼 train_dataloader 의 데이터를 불러와서 모델 훈련 함."
    ]
   },
   {
@@ -795,7 +835,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8a9996004a64e9dbfb14d26d343ab03",
+       "model_id": "22d9263790824be2ba6d0e6c579ba152",
        "version_major": 2,
        "version_minor": 0
       },
@@ -830,7 +870,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 모델 평가"
+    "### 모델 평가\n",
+    "- 모델 평가를 위한 메트릭 오브젝트 생성 "
    ]
   },
   {
@@ -846,47 +887,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 모델 추론 및 모델 평가\n",
+    "- eval_dataloader 를 통해서 입력 데이터 생성\n",
+    "- outputs = model(**batch) 를 통해서 모델 추론\n",
+    "- 모델 추론의 outputs 을 통하여 예측값 생성\n",
+    "```\n",
+    "    logits = outputs.logits\n",
+    "    predictions = torch.argmax(logits, dim=-1)\n",
+    "```    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1개의 Batch 만 실행 결과 보기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "barch: \n",
+      "\n",
+      " {'labels': tensor([2, 4, 1, 4, 3, 4, 2, 3], device='cuda:0'), 'input_ids': tensor([[  101, 14812, 16442,  ...,     0,     0,     0],\n",
+      "        [  101, 19383,  1303,  ...,     0,     0,     0],\n",
+      "        [  101, 12008, 27788,  ...,     0,     0,     0],\n",
+      "        ...,\n",
+      "        [  101,  3930, 13991,  ...,     0,     0,     0],\n",
+      "        [  101,  1284,  3523,  ...,     0,     0,     0],\n",
+      "        [  101,  6682,  3537,  ...,     0,     0,     0]], device='cuda:0'), 'token_type_ids': tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0],\n",
+      "        ...,\n",
+      "        [0, 0, 0,  ..., 0, 0, 0],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0]], device='cuda:0'), 'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],\n",
+      "        [1, 1, 1,  ..., 0, 0, 0],\n",
+      "        [1, 1, 1,  ..., 0, 0, 0],\n",
+      "        ...,\n",
+      "        [1, 1, 1,  ..., 0, 0, 0],\n",
+      "        [1, 1, 1,  ..., 0, 0, 0],\n",
+      "        [1, 1, 1,  ..., 0, 0, 0]], device='cuda:0')}\n",
+      "\n",
+      "\n",
+      " outputs: \n",
+      "\n",
+      " SequenceClassifierOutput(loss=tensor(1.0709, device='cuda:0'), logits=tensor([[-1.2168, -0.8582,  0.3397,  0.9252,  0.5452],\n",
+      "        [-1.1683, -0.7792,  0.0881,  1.0961,  1.0074],\n",
+      "        [ 0.5724, -0.1341, -0.9887, -0.8375, -0.8175],\n",
+      "        [-1.0566, -0.8349, -0.3032,  0.9202,  1.4982],\n",
+      "        [-1.0566, -0.5282,  0.2391,  0.9545,  0.7958],\n",
+      "        [-0.9530, -1.0394, -0.5003,  1.1128,  1.6864],\n",
+      "        [-0.0652,  0.2167,  0.1927, -0.1794, -1.1362],\n",
+      "        [-1.1977, -0.9179, -0.1608,  1.1276,  1.2958]], device='cuda:0'), hidden_states=None, attentions=None)\n",
+      "\n",
+      "\n",
+      " logits: \n",
+      "\n",
+      " tensor([[-1.2168, -0.8582,  0.3397,  0.9252,  0.5452],\n",
+      "        [-1.1683, -0.7792,  0.0881,  1.0961,  1.0074],\n",
+      "        [ 0.5724, -0.1341, -0.9887, -0.8375, -0.8175],\n",
+      "        [-1.0566, -0.8349, -0.3032,  0.9202,  1.4982],\n",
+      "        [-1.0566, -0.5282,  0.2391,  0.9545,  0.7958],\n",
+      "        [-0.9530, -1.0394, -0.5003,  1.1128,  1.6864],\n",
+      "        [-0.0652,  0.2167,  0.1927, -0.1794, -1.1362],\n",
+      "        [-1.1977, -0.9179, -0.1608,  1.1276,  1.2958]], device='cuda:0')\n",
+      "\n",
+      "\n",
+      " predictions: \n",
+      "\n",
+      " tensor([3, 3, 0, 4, 3, 4, 1, 4], device='cuda:0')\n"
+     ]
+    }
+   ],
    "source": [
-    "def compute_metrics(eval_pred):\n",
-    "    logits, labels = eval_pred\n",
-    "    predictions = np.argmax(logits, axis=-1)\n",
-    "    return metric.compute(predictions=predictions, references=labels)"
+    "model.eval()\n",
+    "for batch in eval_dataloader:\n",
+    "    batch = {k: v.to(device) for k, v in batch.items()}\n",
+    "    print(\"barch: \\n\\n\", batch)\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**batch)\n",
+    "        print(\"\\n\\n outputs: \\n\\n\", outputs)        \n",
+    "\n",
+    "    logits = outputs.logits\n",
+    "    print(\"\\n\\n logits: \\n\\n\", logits)        \n",
+    "    predictions = torch.argmax(logits, dim=-1)\n",
+    "    print(\"\\n\\n predictions: \\n\\n\", predictions)            \n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 전체 Batch 로 모델 평가"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# del model\n",
-    "# del pytorch_model\n",
-    "# del trainer\n",
-    "# torch.cuda.empty_cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.498}"
+       "{'accuracy': 0.509}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metric = load_metric(\"accuracy\")\n",
     "model.eval()\n",
     "for batch in eval_dataloader:\n",
     "    batch = {k: v.to(device) for k, v in batch.items()}\n",
@@ -917,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +1049,7 @@
        "{'status': 'ok', 'restart': True}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,6 +1059,13 @@
     "\n",
     "IPython.Application.instance().kernel.do_shutdown(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
