--- a/1_NSMC-Classification/3_Training/2.1.Train_Scratch.ipynb
+++ b/1_NSMC-Classification/3_Training/2.1.Train_Scratch.ipynb
@@ -21,9 +21,10 @@
     "- 3. Hugging Face Electra tokenizer 및 pre-trained model 사용\n",
     "- 4. torch custome Dataset 생성 및 훈련 준비\n",
     "- 5. 모델 Fine-Tuning\n",
-    "    - 5.1. Fine-tuning with native PyTorch\n",
+    "    - 5.1. Fine-tuning with Trainer\n",
     "    - 5.2. 파이썬 스크립트로 훈련    \n",
-    "    - 5.3. Fine-tuning with Trainer\n",
+    "    - 5.3. Fine-tuning with native PyTorch    \n",
+    "\n",
     "    \n",
     "---\n",
     "### 참고:\n",
@@ -210,6 +211,48 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22e39e27227441ff8e0cd7ee8c8343b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/257k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc790d3b10c44b3bb8db92001de7dcc3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/61.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e66a52083a5a4ab29303e2875dbbde18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/458 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -221,8 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32.7 s, sys: 334 ms, total: 33.1 s\n",
-      "Wall time: 33.2 s\n"
+      "CPU times: user 33.1 s, sys: 316 ms, total: 33.4 s\n",
+      "Wall time: 33.6 s\n"
      ]
     }
    ],
@@ -346,13 +389,27 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76e4828db7b6402a8581f4d791a4839c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/54.0M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense.weight', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense_prediction.bias']\n",
+      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
       "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "***** Running training *****\n",
       "  Num examples = 119641\n",
@@ -370,7 +427,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='468' max='468' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [468/468 02:21, Epoch 1/1]\n",
+       "      [468/468 02:19, Epoch 1/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -382,19 +439,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>0.691900</td>\n",
+       "      <td>0.692300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>200</td>\n",
-       "      <td>0.594600</td>\n",
+       "      <td>0.597700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>300</td>\n",
-       "      <td>0.443800</td>\n",
+       "      <td>0.443400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>400</td>\n",
-       "      <td>0.391700</td>\n",
+       "      <td>0.388800</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -421,14 +478,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 52s, sys: 37.2 s, total: 2min 29s\n",
-      "Wall time: 2min 25s\n"
+      "CPU times: user 1min 52s, sys: 36.3 s, total: 2min 28s\n",
+      "Wall time: 2min 26s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=468, training_loss=0.5077957454909626, metrics={'train_runtime': 141.4261, 'train_samples_per_second': 845.961, 'train_steps_per_second': 3.309, 'total_flos': 845575811718948.0, 'train_loss': 0.5077957454909626, 'epoch': 1.0})"
+       "TrainOutput(global_step=468, training_loss=0.5070040490892198, metrics={'train_runtime': 140.3045, 'train_samples_per_second': 852.724, 'train_steps_per_second': 3.336, 'total_flos': 845575811718948.0, 'train_loss': 0.5070040490892198, 'epoch': 1.0})"
       ]
      },
      "execution_count": 14,
@@ -636,10 +693,10 @@
       "}\n",
       "\n",
       "loading weights file https://huggingface.co/monologg/koelectra-small-v3-discriminator/resolve/main/pytorch_model.bin from cache at /home/ec2-user/.cache/huggingface/transformers/052bc3ecf8c8484f1519650794b32b6d2c70750bcba71d1f763951514b5cf0c8.84bb33167d2e89d46f4cde129b2f4c447618ac33ac46f2012ee9e5e706fec112\n",
-      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense.weight', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense_prediction.bias']\n",
+      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
       "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -744,7 +801,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.3717063069343567, 'eval_accuracy': 0.8420482507756499, 'eval_f1': 0.8415715416292202, 'eval_precision': 0.8426226866152731, 'eval_recall': 0.8405230159155458, 'eval_runtime': 27.9085, 'eval_samples_per_second': 2679.331, 'eval_steps_per_second': 10.499, 'epoch': 1.0}\n"
+      "{'eval_loss': 0.3717063069343567, 'eval_accuracy': 0.8420482507756499, 'eval_f1': 0.8415715416292202, 'eval_precision': 0.8426226866152731, 'eval_recall': 0.8405230159155458, 'eval_runtime': 28.193, 'eval_samples_per_second': 2652.286, 'eval_steps_per_second': 10.393, 'epoch': 1.0}\n"
      ]
     },
     {
@@ -763,7 +820,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train_runtime': 86.9888, 'train_samples_per_second': 859.605, 'train_steps_per_second': 3.368, 'train_loss': 0.4650391067661116, 'epoch': 1.0}\n",
+      "{'train_runtime': 87.1084, 'train_samples_per_second': 858.424, 'train_steps_per_second': 3.364, 'train_loss': 0.4650391067661116, 'epoch': 1.0}\n",
       "=====> Loading Test Files <===========\n",
       "test_data_filenames ['data/nsmc/test/ratings_test.txt']\n",
       "test_file_path data/nsmc/test/ratings_test.txt\n",
@@ -856,8 +913,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 10s, sys: 22.1 s, total: 2min 32s\n",
-      "Wall time: 2min 33s\n"
+      "CPU times: user 2min 12s, sys: 21.1 s, total: 2min 33s\n",
+      "Wall time: 2min 34s\n"
      ]
     }
    ],
@@ -1031,10 +1088,10 @@
       "}\n",
       "\n",
       "loading weights file https://huggingface.co/monologg/koelectra-small-v3-discriminator/resolve/main/pytorch_model.bin from cache at /home/ec2-user/.cache/huggingface/transformers/052bc3ecf8c8484f1519650794b32b6d2c70750bcba71d1f763951514b5cf0c8.84bb33167d2e89d46f4cde129b2f4c447618ac33ac46f2012ee9e5e706fec112\n",
-      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense.weight', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense_prediction.bias']\n",
+      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
       "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -1070,9 +1127,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 0 [200/1196 (67%)] Loss=0.667974;\n",
+      "Train Epoch: 0 [200/1196 (67%)] Loss=0.684317;\n",
       "The time elapse of epoch 000 is: 00: 00: 03\n",
-      "Train Epoch: 0 Acc=0.783654;\n",
+      "Train Epoch: 0 Acc=0.814904;\n",
       "the model is saved at models/nsmc/pytorch_model.bin\n"
      ]
     }
@@ -1285,10 +1342,10 @@
       "}\n",
       "\n",
       "loading weights file https://huggingface.co/monologg/koelectra-small-v3-discriminator/resolve/main/pytorch_model.bin from cache at /home/ec2-user/.cache/huggingface/transformers/052bc3ecf8c8484f1519650794b32b6d2c70750bcba71d1f763951514b5cf0c8.84bb33167d2e89d46f4cde129b2f4c447618ac33ac46f2012ee9e5e706fec112\n",
-      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense.weight', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense_prediction.bias']\n",
+      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
       "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at monologg/koelectra-small-v3-discriminator and are newly initialized: ['classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -1406,7 +1463,7 @@
       "size of test_dataset : 49832\n",
       "dataset size with frac: 1 ==> 49832\n",
       "Test Accuracy: Acc=0.496422;\n",
-      "CPU times: user 1min 24s, sys: 11 s, total: 1min 35s\n",
+      "CPU times: user 1min 25s, sys: 10.7 s, total: 1min 36s\n",
       "Wall time: 1min 36s\n"
      ]
     }
@@ -1453,6 +1510,13 @@
     "\n",
     "IPython.Application.instance().kernel.do_shutdown(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
